--- a/Notebooks/RandomForest.ipynb
+++ b/Notebooks/RandomForest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"Resources/exploanet_data.csv\")\n",
+    "data = pd.read_csv(\"../Resources/exoplanet_data.csv\")\n",
     "\n",
     "# Drop null columns\n",
     "data = data.dropna(axis='columns', how='all')\n",
@@ -29,14 +29,14 @@
     "data = data.dropna()\n",
     "\n",
     "# Convert dtypes of int64 to float64\n",
-    "for coumn, content in data.items():\n",
+    "for column, content in data.items():\n",
     "    if data[column].dtype == 'int64':\n",
     "        data = data.astype({column: 'float64'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,25 +62,277 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Data Score: 100.0 %\n",
+      "Testing Data Score: 89.989 %\n"
+     ]
+    }
+   ],
    "source": [
-    "model_1 = LogisticRegression(solver='newton-cg', multi_class='auto')\n",
+    "model_1 = RandomForestClassifier(n_estimators=200)\n",
     "model_1.fit(X_train_scaled, Y_train)\n",
     "\n",
     "model_1_training_score = round(model_1.score(X_train_scaled, Y_train)*100,3)\n",
     "base_accuracy = round(model_1.score(X_test_scaled, Y_test)*100,3)\n",
     "\n",
     "print(f\"Training Data Score: {model_1_training_score} %\")\n",
-    "print(f\"Testing Data score: {base_accuracy} %\")"
+    "print(f\"Testing Data Score: {base_accuracy} %\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Feature</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>koi_fpflag_co</th>\n",
+       "      <td>0.109968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_fpflag_nt</th>\n",
+       "      <td>0.096564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_fpflag_ss</th>\n",
+       "      <td>0.070334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_model_snr</th>\n",
+       "      <td>0.055990</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_prad</th>\n",
+       "      <td>0.045544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_steff_err1</th>\n",
+       "      <td>0.039961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_fpflag_ec</th>\n",
+       "      <td>0.034158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_prad_err2</th>\n",
+       "      <td>0.033456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_duration_err2</th>\n",
+       "      <td>0.032330</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_prad_err1</th>\n",
+       "      <td>0.031777</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_duration_err1</th>\n",
+       "      <td>0.031756</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_duration</th>\n",
+       "      <td>0.024459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_time0bk_err2</th>\n",
+       "      <td>0.023051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_steff_err2</th>\n",
+       "      <td>0.022841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_time0bk_err1</th>\n",
+       "      <td>0.022799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_period</th>\n",
+       "      <td>0.022654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_depth</th>\n",
+       "      <td>0.019358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_period_err1</th>\n",
+       "      <td>0.018870</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_period_err2</th>\n",
+       "      <td>0.018031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_impact</th>\n",
+       "      <td>0.017939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_teq</th>\n",
+       "      <td>0.017865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_insol_err1</th>\n",
+       "      <td>0.015805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_depth_err2</th>\n",
+       "      <td>0.013758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_insol_err2</th>\n",
+       "      <td>0.013729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_depth_err1</th>\n",
+       "      <td>0.013338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ra</th>\n",
+       "      <td>0.013266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_time0bk</th>\n",
+       "      <td>0.013132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_insol</th>\n",
+       "      <td>0.012202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_impact_err1</th>\n",
+       "      <td>0.011563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_srad_err1</th>\n",
+       "      <td>0.011145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_kepmag</th>\n",
+       "      <td>0.010991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_impact_err2</th>\n",
+       "      <td>0.010710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>dec</th>\n",
+       "      <td>0.010529</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_slogg_err2</th>\n",
+       "      <td>0.010514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_steff</th>\n",
+       "      <td>0.009697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_srad</th>\n",
+       "      <td>0.009433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_slogg</th>\n",
+       "      <td>0.009278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_slogg_err1</th>\n",
+       "      <td>0.009158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_srad_err2</th>\n",
+       "      <td>0.008779</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>koi_tce_plnt_num</th>\n",
+       "      <td>0.003270</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Score\n",
+       "Feature                    \n",
+       "koi_fpflag_co      0.109968\n",
+       "koi_fpflag_nt      0.096564\n",
+       "koi_fpflag_ss      0.070334\n",
+       "koi_model_snr      0.055990\n",
+       "koi_prad           0.045544\n",
+       "koi_steff_err1     0.039961\n",
+       "koi_fpflag_ec      0.034158\n",
+       "koi_prad_err2      0.033456\n",
+       "koi_duration_err2  0.032330\n",
+       "koi_prad_err1      0.031777\n",
+       "koi_duration_err1  0.031756\n",
+       "koi_duration       0.024459\n",
+       "koi_time0bk_err2   0.023051\n",
+       "koi_steff_err2     0.022841\n",
+       "koi_time0bk_err1   0.022799\n",
+       "koi_period         0.022654\n",
+       "koi_depth          0.019358\n",
+       "koi_period_err1    0.018870\n",
+       "koi_period_err2    0.018031\n",
+       "koi_impact         0.017939\n",
+       "koi_teq            0.017865\n",
+       "koi_insol_err1     0.015805\n",
+       "koi_depth_err2     0.013758\n",
+       "koi_insol_err2     0.013729\n",
+       "koi_depth_err1     0.013338\n",
+       "ra                 0.013266\n",
+       "koi_time0bk        0.013132\n",
+       "koi_insol          0.012202\n",
+       "koi_impact_err1    0.011563\n",
+       "koi_srad_err1      0.011145\n",
+       "koi_kepmag         0.010991\n",
+       "koi_impact_err2    0.010710\n",
+       "dec                0.010529\n",
+       "koi_slogg_err2     0.010514\n",
+       "koi_steff          0.009697\n",
+       "koi_srad           0.009433\n",
+       "koi_slogg          0.009278\n",
+       "koi_slogg_err1     0.009158\n",
+       "koi_srad_err2      0.008779\n",
+       "koi_tce_plnt_num   0.003270"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Determine which features ought to be kept\n",
     "feature_names = X.columns.tolist()\n",
@@ -92,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,9 +357,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Data Score: 100.0 %\n",
+      "Testing Data Score: 90.046 %\n"
+     ]
+    }
+   ],
    "source": [
     "# Use new data for all subsequent models\n",
     "# Assign new data to X\n",
@@ -126,14 +387,33 @@
     "select_features_accuracy = round(model_2.score(X_test_scaled, Y_test)*100,3)\n",
     "\n",
     "print(f\"Training Data Score: {model_2_training_score} %\")\n",
-    "print(f\"Testing Data Score: {select_features-accuracy} %\")"
+    "print(f\"Testing Data Score: {select_features_accuracy} %\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 72 candidates, totalling 360 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  16 tasks      | elapsed:   37.9s\n",
+      "[Parallel(n_jobs=-1)]: Done 112 tasks      | elapsed:  4.5min\n",
+      "[Parallel(n_jobs=-1)]: Done 272 tasks      | elapsed: 11.0min\n",
+      "[Parallel(n_jobs=-1)]: Done 360 out of 360 | elapsed: 14.8min finished\n"
+     ]
+    }
+   ],
    "source": [
     "# Creature the RandomSearchCV model\n",
     "model_3 = RandomForestClassifier(random_state=42)\n",
@@ -151,13 +431,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Data Score: 100.0 %\n",
+      "Testing Data Score: 90.046 %\n"
+     ]
+    }
+   ],
    "source": [
     "# Tuned parameters\n",
     "max_features = grid.best_params_['max_features']\n",
-    "n_estimators = grid.best-params_['n_estimators']\n",
+    "n_estimators = grid.best_params_['n_estimators']\n",
     "max_depth = grid.best_params_['max_depth']\n",
     "criterion = 'entropy'\n",
     "\n",
@@ -174,9 +463,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Actual</th>\n",
+       "      <th>Prediction</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CANDIDATE</td>\n",
+       "      <td>CANDIDATE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CANDIDATE</td>\n",
+       "      <td>CANDIDATE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>CANDIDATE</td>\n",
+       "      <td>CANDIDATE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>CONFIRMED</td>\n",
+       "      <td>CONFIRMED</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "      <td>FALSE POSITIVE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Actual      Prediction\n",
+       "0        CANDIDATE       CANDIDATE\n",
+       "1   FALSE POSITIVE  FALSE POSITIVE\n",
+       "2   FALSE POSITIVE  FALSE POSITIVE\n",
+       "3   FALSE POSITIVE  FALSE POSITIVE\n",
+       "4        CANDIDATE       CANDIDATE\n",
+       "5   FALSE POSITIVE  FALSE POSITIVE\n",
+       "6        CANDIDATE       CANDIDATE\n",
+       "7   FALSE POSITIVE  FALSE POSITIVE\n",
+       "8   FALSE POSITIVE  FALSE POSITIVE\n",
+       "9   FALSE POSITIVE  FALSE POSITIVE\n",
+       "10  FALSE POSITIVE  FALSE POSITIVE\n",
+       "11  FALSE POSITIVE  FALSE POSITIVE\n",
+       "12       CONFIRMED       CONFIRMED\n",
+       "13  FALSE POSITIVE  FALSE POSITIVE\n",
+       "14  FALSE POSITIVE  FALSE POSITIVE"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predictions = tuned_model.predict(X_test_scaled)\n",
     "classifications = Y_test.unique().tolist()\n",
@@ -193,26 +611,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Accuracy</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Base Model</th>\n",
+       "      <td>89.989%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Select Features Model</th>\n",
+       "      <td>90.046%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tuned Model</th>\n",
+       "      <td>90.046%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Accuracy\n",
+       "                              \n",
+       "Base Model             89.989%\n",
+       "Select Features Model  90.046%\n",
+       "Tuned Model            90.046%"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "evaluations = {'': ['Base Model', 'Select Features Model', 'Tuned Model'], 'Accuracy': [f\"{base_accuracy}%\", f\"{select_features_accuracy}%\", f\"{tuned_accuracy}%\"]}\n",
     "\n",
     "evaluations_df = pd.DataFrame(evaluations)\n",
     "evaluations_df = evaluations_df.set_index('')\n",
     "\n",
-    "evaluations_df.to_csv('Resources/RandomForestClassifier_eval.csv')\n",
+    "evaluations_df.to_csv('../Resources/RandomForestClassifier_eval.csv')\n",
     "evaluations_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'Models/BestModel_RandomForest.sav'\n",
+    "filename = '../Models/BestModel_RandomForest.sav'\n",
     "_ = joblib.dump(tuned_model, filename)"
    ]
   }
